# Clang

./: .gitignore  CMakeLists.txt
apl/: CMakeLists.txt
apl/inc/: func1.h
apl/src/: func1.c  main.c
lib/: CMakeLists.txt
lib/inc/: lib_main.h
lib/src/: lib_main.c
lib2/: CMakeLists.txt
lib2/src/: lib_main.c
